Fix index.html for webpack build deployment

--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,11 @@
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-  <!-- Leaflet CSS & JS (untuk peta) -->
+  <!-- Leaflet CSS & JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-
-  <!-- Stylesheets lainnya jika ada -->
 </head>
 <body>
-
   <a href="#main-content" class="skip-link" id="skip-link">Lewati ke konten utama</a>
 
   <header>
@@ -31,7 +28,5 @@
   <footer>
     <!-- Footer akan di-render melalui SPA -->
   </footer>
-
-  <script src="bundle.js"></script>
 </body>
 </html>
